--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,40 @@
 .App {
+  position:absolute;
   text-align: center;
+  top:0;
+  left:0;
+  background-color:white;
+  box-shadow: 5px 0 5px -2px #999;
+  margin:0;
+  padding:0 5em 0 5em;
+    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox; /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Chrome */
+    display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    -ms-flex-direction: column;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+}
+
+.App-login {
+  padding:0;
+  top:0;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding:0;
+  top:0;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
